--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "argon2": "^0.40.1",
     "async": "^3.2.5",
+    "bcrypt": "^5.1.1",
     "cors": "2.8.5",
     "dotenv": "16.4.5",
     "express": "4.19.2",
